--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -8,3 +8,12 @@ name: apiserver
 url: 'http://127.0.0.1:6663'
 # pingServer函数尝试的次数
 max_ping_count: 10
+log:
+  writers: file,stdout
+  logger_level: DEBUG
+  logger_file: log/apiserver.log
+  log_format_text: false
+  rollingPolicy: size
+  log_rotate_date: 1
+  log_rotate_size: 1
+  log_backup_count: 7
