--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -17,3 +17,13 @@ log:
   log_rotate_date: 1
   log_rotate_size: 1
   log_backup_count: 7
+db:
+  name: db_apiserver
+  addr: 127.0.0.1:3306
+  username: root
+  password: qazxsw
+docker_db:
+  name: db_apiserver
+  addr: 127.0.0.1:3306
+  username: root
+  password: qazxsw
